'moderate' should be above 'little' . partner's exp should have 'doesn't care' Created at, Updated at : put a (GMT) behind Optimal number of partners Fix date popup make it darker Hide the 'is active mode' Keyword matching: convert lowercase kw In the matching page: show username or fullname | limit 1000     matching page: move username to the third column Percent of compatibility is calculated as: Average the close matches, and total the exact matches In the matching page: Insert column: percent of compatibility, next to user, sort by %compat
SQL:
ALTER TABLE `sayygo` CHANGE `created_at` `created_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP;
SQL//

--- a/b/web/css/brianadd.css
+++ b/b/web/css/brianadd.css
@@ -29,3 +29,4 @@ div.editable {
     border: 1px solid #ccc;
     padding: 5px;
 }
+div.error-summary{display:none}
